version1.0/README.md
Here’s the **README.md** file, focusing on providing a concise overview, project structure, 
setup instructions, and main functionalities of the ML-BDSO framework.

---

### README.md

```markdown
# ML-BDSO: Multi-Level Bayesian Defect Simulation and Optimization Framework

## Overview
The #ML-BDSO# framework is a Python-based tool designed to improve layer bonding quality and 
reduce defect probabilities in large-scale 3D concrete printing. It combines **Bayesian inference**, 
**Monte Carlo simulation with adaptive sampling**, **machine learning-based sensitivity analysis**, 
and **feedback-controlled optimization** to provide real-time adjustments during the printing process, 
addressing uncertainties in material properties, process parameters, and environmental conditions.

ML-BDSO framework Developer: Dr. Yang Lu (P.E.) Associate Professor of Civil Engineering at Boise State University. 
Dr. Lu's expertise lies in hardened concrete properties prediction, long-term durability assessment, infrastructure 
material database management, material quality control, uncertainty quantification, and pavement evaluation. He 
has extensive experience in assessing performance measures and durability solutions for civil infrastructure materials.

His expertise in , and AI-driven performance 
modeling . He has developed multiscale 
homogenization frameworks, virtual testing platforms, and Bayesian inference-based optimization models. 


Copyright © 2024 Dr. Yang Lu. This software and accompanying documentation are licensed under the MIT License. All rights reserved. 
Redistribution and use in source and binary forms, with or without modification, are permitted provided that the 
conditions of the MIT License are met. For any inquiries or collaborations, please contact Dr. Yang Lu through Boise State University.

## New Features and Updates

1. **Enhanced Input Data Files**:
   - **New Parameters**: Expanded input files with added rheological and anisotropic properties for fresh concrete and 3D printed layers.
   - **Units for Each Parameter**: Each input file now includes units, facilitating accurate simulation results.

2. **Updated Python Code**:
   - **Adaptive Bayesian Inference**: The `bayesian_inference.py` script now adapts priors based on new observed data, refining predictions iteratively.
   - **Improved Monte Carlo Simulation**: `monte_carlo_simulation.py` now includes robust error handling for `NaN` values, ensuring trend reliability.
   - **Unit-Based Sensitivity Analysis**: `sensitivity_analysis.py` now displays sensitivity scores with units for clarity.
   - **Optimized Feedback Control**: The `feedback_optimization.py` file applies a 10% reduction on sensitivity scores, focusing on top parameters to enhance layer quality.


## Project Structure

ML-BDSO/
│
├── data/                              # Input data files
│   ├── material_properties.txt         # Updated material properties with units and descriptions
│   ├── process_parameters.txt          # Updated process parameters for 3D printing
│   └── environmental_conditions.txt    # Updated environmental conditions with units
│
├── results/                           # Output files generated by the ML-BDSO framework
│   ├── output_data.txt                # Summary of results from main.py
│   ├── initial_defect_probability_distribution.png    # Initial defect probability histogram
│   ├── monte_carlo_defect_probability_distribution.png # Monte Carlo defect probability distribution
│   ├── defect_probability_trend.png   # Defect probability trend over simulations
│   ├── sensitivity_scores.png         # Sensitivity analysis results with top 10 scores
│   └── optimized_parameters.png       # Optimized parameter values after feedback optimization
│
├── src/                               # Source code for ML-BDSO framework
│   ├── main.py                        # Main script to run the entire ML-BDSO workflow
│   ├── bayesian_inference.py          # Bayesian inference with adaptive prior updating
│   ├── monte_carlo_simulation.py      # Monte Carlo simulation with defect probability analysis
│   ├── sensitivity_analysis.py        # Sensitivity analysis with unit-based scores
│   ├── feedback_optimization.py       # Feedback optimization for parameter adjustment
│   └── auto_update_priors.py          # Utility function to update Bayesian priors adaptively
│
├── docs/                              # Documentation
│   ├── README.md                      # Project overview, running instructions, and file structure
│   └── USER_MANUAL.md                 # Detailed user manual with updated instructions
│
└── LICENSE.md                         # License file for the project
```

## Dependencies

This project requires Python 3.x and the following packages:
- `pandas` for data handling
- `numpy` for numerical operations
- `scipy` for statistical functions
- `matplotlib` for plotting results

Install dependencies using:
```bash
pip install -r requirements.txt
```

## How to Run the ML-BDSO Framework

1. **Prepare Data**:
   - Ensure the `data/` directory contains properly formatted `.txt` files:
     - **material_properties.txt**: Defines material characteristics like compressive strength, fiber content, etc.
     - **process_parameters.txt**: Defines printing parameters like layer height, print speed, and nozzle orientation.
     - **environmental_conditions.txt**: Defines external conditions such as temperature and humidity.
   
2. **Execute Main Script**:
   - Navigate to the `src/` folder and run `main.py` to execute the ML-BDSO framework:
   ```bash
   cd src
   python main.py
   ```
   
3. **Check Results**:
   - Output files, including defect probability distributions, sensitivity scores, and optimized parameters, are saved in the `results/` directory.

## Functionality and Key Outputs

1. **Bayesian Inference**: Initializes defect probability priors based on material, process, and environmental data, generating an initial defect probability distribution.
2. **Monte Carlo Simulation**: Simulates defect probabilities with adaptive sampling, producing a distribution and trend of defect probabilities across simulations.
3. **Sensitivity Analysis**: Identifies the top parameters impacting defect probability. High sensitivity scores indicate parameters with a substantial influence on bonding quality.
4. **Feedback Optimization**: Adjusts parameters based on sensitivity results to enhance bonding quality. The optimized values are plotted for visualization.

### Output Visualizations

The framework produces the following plots, saved in `results/`:
- **Initial Defect Probability Distribution**: Shows the initial probability distribution based on Bayesian inference.
- **Monte Carlo Defect Probability Distribution**: Visualizes defect probability distribution from simulations.
- **Defect Probability Trend Over Simulations**: Tracks probability variations across simulations.
- **Top Sensitivity Scores**: Highlights the parameters most affecting defect probability.
- **Optimized Print Parameters**: Shows the top parameters and their adjusted values based on optimization.

For more detailed instructions, please refer to the USER_MANUAL.md.


